--- a/mysite/templates/auth/register.html
+++ b/mysite/templates/auth/register.html
@@ -1,4 +1,4 @@
-<form method="POST" class="reg-form">
+<form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Register">
