--- a/mysite/templates/index.html
+++ b/mysite/templates/index.html
@@ -1,1 +1,7 @@
 <h1>{{ title }}</h1>
+{% for project in projects %}
+  <h1>{{ project.project_name }}</h1>
+  <p>{{ project.description }}</p>
+  <img src="{{ project.project_pic.url }}" alt="" width="250">
+  <a href="{{ project.url }}" target="blank">View full project</a>
+{% endfor %}
