--- a/mysite/templates/auth/login.html
+++ b/mysite/templates/auth/login.html
@@ -1,10 +1,32 @@
- <form method="POST">
-    {% csrf_token %}
-    <input type="text" name="username" placeholder="Email Address">
-    <input type="password" name="password" placeholder="Password">
-    <input type="submit" value="Login">
-</form>
+{% extends "auth/base.html" %}
 
-<div>
-    <p>Don't have an account? <a href="{% url 'register' %}">Sign Up</a></p>
-</div>
+{% block content %}
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+                <div class="text-center mt-4">
+                    <h1 class="title">Login</h1>
+                </div>
+                <hr>
+                <form method="POST" class="form">
+                    {% csrf_token %}
+                    <div class="form-group mt-4">
+                        <input type="text" name="username" placeholder="Email Address" class="form-control">
+                    </div>
+                    <div class="from-group mt-2">
+                        <input type="password" name="password" placeholder="Password" class="form-control">
+                    </div>
+                    <div class="text-center mt-4">
+                        <input type="submit" value="Login" class="btn btn-outline-success">
+                    </div>
+                </form>
+                <hr>
+                <div class="text-center">
+                    <p>Don't have an account? <a href="{% url 'register' %}">Sign Up</a></p>
+                </div>
+            </div>
+            <div class="col-md-3"></div>
+        </div>
+    </div>
+{% endblock %}
