--- a/mysite/templates/auth/register.html
+++ b/mysite/templates/auth/register.html
@@ -1,8 +1,39 @@
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Register">
-</form>
-<div>
-    <p>Already have an account? <a href="{% url 'login' %}">Sign In</a></p>
-</div>
+{% extends "auth/base.html" %}
+
+{% block content %}
+    <div class="container">
+        <div class="row mt-4">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+                <div class="text-center mt-4">
+                    <h1 class="title">Sign Up</h1>
+                </div>
+                <hr>
+                <form method="POST" class="form">
+                    {% csrf_token %}
+                    <div class="form-group mb-3">
+                        {{form.email}}
+                    </div>
+                    <div class="form-group mb-3">
+                        {{form.username}}
+                    </div>
+                    <div class="form-group mb-3">
+                        {{form.password1}}
+                    </div>
+                    <div class="form-group">
+                        {{form.password2}}
+                    </div>
+                    <div class="text-center mt-4">
+                        <input type="submit" value="Sign Up" class="btn btn-outline-success">
+                    </div>
+                </form>
+                <hr>
+                <div class="text-center">
+                    <p>Already have an account? <a href="{% url 'login' %}">Sign In</a></p>
+                </div>
+            </div>
+            <div class="col-md-3"></div>
+        </div>
+    </div>
+{% endblock %}
+
