--- a/mysite/templates/personal/create-project.html
+++ b/mysite/templates/personal/create-project.html
@@ -1,3 +1,37 @@
+{% extends "formbase.html" %}
+
+{% block content %}
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3"></div>
+            <div class="col-md-6 text-center">
+                <h5 class="mt-4">New Project</h5>
+                <hr>
+                <form method="POST" enctype="multipart/form-data" class="form form-dark">
+                    {% csrf_token %}
+                    <div class="form-group mb-3">
+                        {{ form.project_name }}
+                    </div>
+                    <div class="form-group mb-3">
+                        {{ form.project_pic }}
+                    </div>
+                    <div class="form-group mb-3">
+                        {{ form.description }}
+                    </div>
+                    <div class="form-group mb-3">
+                        {{ form.url }}
+                    </div>
+                    <input type="submit" value="Create Project Post" class="btn btn-outline-success mb-4">
+                </form>
+                <a href="{% url 'profile' %}" class="btn btn-info text-light">Cancel</a>
+            </div>
+            <div class="col-md-3"></div>
+        </div>
+    </div>
+  
+{% endblock %}
+
+
 <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
