--- a/mysite/templates/personal/update-project.html
+++ b/mysite/templates/personal/update-project.html
@@ -1,3 +1,29 @@
+{% extends "formbase.html" %}
+
+{% block content %}
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3"></div>
+            <div class="col-md-6 mt-4 text-center">
+                <h5 class="mt-4">Update Project Details</h5>
+                <hr>
+                <form method="POST" enctype="multipart/form-data" class="form form-dark">
+                    {% csrf_token %}
+                    <div class="form-group mb-3">
+                        {{ form.description }}
+                    </div>
+                    <div class="form-group mb-3">
+                        {{ form.url }}
+                    </div>
+                    <input type="submit" value="Update" class="btn btn-outline-info mb-4">
+                </form>
+                <a href="{% url 'single-project-view' pk=project.id %}" class="btn btn-info text-light">Cancel</a>
+            </div>
+            <div class="col-md-3"></div>
+        </div>
+    </div>
+{% endblock %}
+
 <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
