--- a/mysite/templates/profile/profile.html
+++ b/mysite/templates/profile/profile.html
@@ -1,10 +1,47 @@
+{% extends "base.html" %}
+
+{% block content %}
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 details">
+          <h5 class="my-4">{{ profile.fullname }}</h5>
+          <p>{{ profile.bio }}</p>
+          <small class="text-muted">{{ "Date of Birth: "| upper}}{{ profile.d_o_b}}</small>
+        </div>
+        <div class="col-lg-2">
+          <br>
+        </div>
+        <div class="col-lg-4 profile-img">
+          <img src="{{ profile.profile_pic.url }}" alt="">
+        </div>
+      </div>
+      <br>
+      {% if user.is_authenticated %}
+        {% if profile %}
+          <a href="{% url 'update-profile' %}" class="btn btn-outline-info">Edit Profile</a>
+        {% else %}
+          <a href="{% url 'create-profile' %}" class="btn btn-outline-info">Create Profile</a>
+        {% endif %}      
+      {% endif %}
+    </div>
+    <hr>
+    <div class="container">
+      <div class="text-center">
+        <a href="{% url 'create-project' %}" class="btn btn-success" style="width: 80%;">Create Post</a>
+      </div>
+      <br>
+      <div class="wrapper">
+          {% for project in projects %}
+              <div class="item" onclick="location.href='/project/{{project.id}}';">
+                  <img src="{{ project.project_pic.url }}" alt="">
+                  <h4>{{ project.project_name }}</h4>
+              </div>      
+          {% endfor %}
+      </div>
+    </div>
+{% endblock %}
+
 <h1>{{ profile.fullname }}</h1>
 <p>{{ profile.bio }}</p>
 <small>{{ profile.d_o_b}}</small>
 
-{% for project in projects %}
-  <h1>{{ project.project_name }}</h1>
-  <p>{{ project.description }}</p>
-  <img src="{{ project.project_pic.url }}" alt="" width="250">
-  <a href="{{ project.url }}" target="blank">View full project</a>
-{% endfor %}
