--- a/mysite/templates/profile/update-profile.html
+++ b/mysite/templates/profile/update-profile.html
@@ -1,3 +1,34 @@
+{% extends "formbase.html" %}
+
+{% block content %}
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3"></div>
+            <div class="col-md-6 text-center">
+                <h5 class="mt-4">Update Profile</h5>
+                <hr>
+                <form method="POST" enctype="multipart/form-data" class="form form-dark">
+                    {% csrf_token %}
+                    <div class="form-group mb-3">
+                        {{ form.fullname }}                        
+                    </div>
+                    <div class="form-group mb-3">
+                        <label for="">Profile Picture: </label>
+                        {{ form.profile_pic}}
+                    </div>
+                    <div class="form-group mb-3">
+                        {{ form.bio }}
+                    </div>
+                    <input type="submit" value="Update Profile" class="btn btn-outline-success mb-4">
+                </form>
+                <a href="{% url 'profile' %}" class="btn btn-info text-light">Cancel</a>
+            </div>
+            <div class="col-md-3"></div>
+        </div>
+    </div>
+  
+{% endblock %}
+
 <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
