--- a/mysite/templates/review/review.html
+++ b/mysite/templates/review/review.html
@@ -1,3 +1,33 @@
+{% extends "formbase.html" %}
+
+{% block content %}
+  <div class="container pt-4">
+      <div class="row mt-4">
+          <div class="col-md-3"></div>
+          <div class="col-md-6 text-center">
+              <h5 class="mt-4">Project Review</h5>
+              <hr>
+              <form method="POST" class=" form form-dark">
+                {% csrf_token %} 
+                <div class="form-group mb-2">
+                    {{ form.title }}
+                </div>
+                <div class="form-group mb-2">
+                    {{ form.content }}
+                </div>
+                <div class="form-group mb-2">
+                    {{ form.rating }}
+                </div>
+                <input type="submit" value="Send Review" class=" btn btn-outline-success mb-4">
+              </form>
+              <a href="{% url 'single-project-view' pk=project.id %}" class="btn btn-info text-light">Cancel</a>
+          </div>
+          <div class="col-md-3"></div>
+      </div>
+  </div>
+{% endblock %}
+
+
 <form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
